# synthtiger

./: .gitignore  polish_freq_down.py  polish_frequent_words.txt  pyproject.toml  requiments.txt  setup.py
examples/synthtiger/: comented.yaml  config_horizontal_pl.yaml  confusing_chars.py  template_pol.py
resources/corpus/: 0test.txt  polish_frequent_words.txt
synthtiger/: gen.py  main.py
